<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.herprogramacion.restaurantericoparico.ui.LocationActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>


    <!-- Change the camera of the map to show no markers -->
    <Button
        android:id="@+id/go_to_darwin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showOntinyent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/appbar"
        android:text="@string/lite_go_to_darwin" />

    <!-- Change the camera of the map to show one marker -->
    <Button
        android:id="@+id/go_to_adelaide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showFontanars"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/go_to_darwin"
        android:layout_toEndOf="@+id/go_to_australia"
        android:layout_toRightOf="@+id/go_to_australia"
        android:text="@string/lite_go_to_adelaide" />

    <!-- Change the camera of the map to show multiple markers -->
    <Button
        android:id="@+id/go_to_australia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showCVAlenciana"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/go_to_adelaide"
        android:layout_toEndOf="@+id/go_to_darwin"
        android:layout_toRightOf="@+id/go_to_darwin"
        android:text="@string/lite_go_to_australia" />


    <!-- MapFragment with lite mode enabled -->
    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/go_to_australia"
        map:liteMode="true" />

</RelativeLayout>

