<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dee4ee"
    android:orientation="vertical"
    android:padding="@dimen/espacio_norma_1">

    <TextView
        android:id="@+id/titulo_informacion_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/etiqueta_info_usuario"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/espacio_norma_1">

            <ImageView
                android:id="@+id/imageView_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:src="@drawable/usuario" />

            <TextView
                android:id="@+id/texto_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@+id/imageView_user"
                android:text="James Revelo"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/indicador_derecho"
                android:visibility="invisible" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/cardview_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/espacio_norma_1">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:src="@drawable/email" />

            <TextView
                android:id="@+id/texto_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@+id/imageView2"
                android:text="email@email.com"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/icond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:visibility="invisible"
                android:src="@drawable/indicador_derecho" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <TextView
        android:id="@+id/reset_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/espacio_norma_2"
        android:paddingTop="@dimen/espacio_norma_1"
        android:text="@string/etiqueta_contrasena"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <android.support.v7.widget.CardView
        android:id="@+id/rest_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        android:visibility="gone"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/espacio_norma_1"
            android:onClick="change_password">

            <ImageView
                android:id="@+id/icono_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:src="@drawable/contrasena" />

            <TextView
                android:id="@+id/texto_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@+id/icono_password"
                android:text="@string/texto_cambiar_contrasena"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/icono_indicador_derecho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/indicador_derecho" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>